Animation on Home About and Services

--- a/src/style/pages/sections/_sectionExp.scss
+++ b/src/style/pages/sections/_sectionExp.scss
@@ -123,6 +123,7 @@
   }
   &__time {
     margin-bottom: 1rem;
+    margin-left: 5px;
     & svg {
       transform: translate(-5px, 3px);
       height: 20px;
