--- a/src/style/pages/sections/_sectionTitle.scss
+++ b/src/style/pages/sections/_sectionTitle.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  //margin-top: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 
   &__container {
     position: relative;
