--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -165,6 +165,26 @@
   background: $textColor_light;
 }
 
+.duoBtnContainer {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3rem 0 1rem 0;
+}
+
+//* for tablet :
+@media (min-width: 1100px) {
+  .duoBtnContainer {
+    height: auto;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
 .btnChangeColor {
   position: relative;
   width: 38px;
