--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -3,14 +3,15 @@
   overflow: hidden;
 
   &__section {
+    // border: solid 2px red;
     width: 100%;
     padding: 0px 4vw;
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: auto;
-    margin-bottom: auto;
+    // margin-top: auto;
+    // margin-bottom: auto;
 
     &__article {
       min-height: 45vh;
@@ -32,14 +33,46 @@
       height: auto;
       padding: 0rem 2rem 2rem 2rem;
       position: relative;
-      margin: 5rem 0 0 0;
+      //margin: 5rem 0 0 0;
       scale: 0.9;
     }
+  }
+  &__subSection {
+    padding: 2rem 0 2rem 0;
   }
 }
 
 .article {
   margin-top: 2.5rem;
+
+  &__sub {
+    padding: 4rem 10vw 2rem 10vw;
+  }
+}
+
+.subSection {
+  width: 100%;
+  //height: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  //margin: 2rem 0;
+
+  &__title {
+    padding: 0 10vw;
+  }
+
+  &__top {
+    width: 100vw;
+    transform: translate(-30%, 10px);
+    opacity: 0.2;
+  }
+  &__bottom {
+    width: 100vw;
+    transform: translate(60%, -10px);
+    opacity: 0.1;
+  }
 }
 
 .corner {
@@ -215,7 +248,7 @@
   flex-direction: row;
   align-items: baseline;
   margin-top: 3rem;
-  //height: 40px;
+  height: 30px;
 
   &__text {
     width: 100%;
@@ -223,8 +256,8 @@
     margin-left: 0.5rem;
     white-space: nowrap;
     overflow: hidden;
-
-    // animation: cursor 0.3s step-end infinite alternate;
+    border-right: 1px solid white;
+    animation: cursor 0.4s step-end infinite alternate;
   }
 }
 
@@ -242,6 +275,9 @@
 
 //* for tablet :
 @media (min-width: 600px) {
+  .article__sub {
+    padding: 4rem 20vw 2rem 20vw;
+  }
   .home {
     // margin-left: 15vw;
     &__section {
@@ -252,8 +288,6 @@
     }
   }
 }
-
-//* for desktop :
 @media (min-width: 1100px) {
   .home {
     &__section {
@@ -276,6 +310,16 @@
         margin-right: -4vw;
         margin-top: 4rem;
       }
+    }
+  }
+}
+
+//* for small_desktop :
+@media (max-width: 1250px) {
+  .home {
+    &__section {
+      padding-left: 0;
+      padding-right: 0;
     }
   }
   .picture__container {
