--- a/src/style/pages/sections/_sectionStack.scss
+++ b/src/style/pages/sections/_sectionStack.scss
@@ -1,7 +1,5 @@
 .sectionStack {
   width: 100%;
-  height: 100%;
-  min-height: 80vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -17,6 +15,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 3rem;
+    margin-top: 2rem;
 
     // border: 1px solid rgb(0, 255, 21);
   }
@@ -67,6 +66,10 @@
         }
       }
     }
+  }
+  &__textContainerA {
+    position: absolute;
+    top: 42%;
   }
 }
 //* lightMode :
