Add socialMedia and page transition

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@
 @import "./style/components/rollingIcon";
 @import "./style/components/contactForm";
 @import "./style/components/flexBubbleContainer";
+@import "./style/components/socialButtons";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
 @import "./style/pages/sections/sectionSkills";
