--- a/src/style/components/_contactForm.scss
+++ b/src/style/components/_contactForm.scss
@@ -13,6 +13,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
+    margin: 2rem 0;
   }
 }
 .contactBlock {
