--- a/src/style/layout/_gridManager.scss
+++ b/src/style/layout/_gridManager.scss
@@ -4,7 +4,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 
   gap: 5px;
   grid-auto-flow: dense;
@@ -250,14 +250,17 @@
 
 .box {
   width: 100%;
+  height: 100%;
+  position: relative;
   &__content {
     width: 100%;
     height: 100%;
+    min-height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem 0 2rem 0;
     & svg {
       width: 40px;
       height: 40px;
@@ -269,6 +272,24 @@
     & p {
       margin-bottom: 1rem;
       padding: 0 1rem 0rem 1rem;
+    }
+
+    &__span {
+      width: auto;
+      height: 30px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: $color_page_bg_2_light;
+      border-radius: 0 0 0.5rem 0.5rem;
+      color: $textColor_light;
+      font-style: italic;
+
+      & span {
+        display: inline-block;
+        line-height: 30px;
+      }
     }
   }
 }
@@ -698,7 +719,6 @@
     grid-row: span 1 !important;
 
     &__card--cardB {
-      padding: 1rem;
       position: relative;
       transform: rotateY(0deg);
       border-radius: 0 0 1rem 1rem;
