--- a/src/style/pages/sections/_sectionAccordion.scss
+++ b/src/style/pages/sections/_sectionAccordion.scss
@@ -8,7 +8,7 @@
   margin-inline: auto;
 
   padding-inline: 0.5rem;
-  margin-top: 2rem;
+  //margin-top: 2rem;
 }
 
 .accordion {
@@ -364,9 +364,6 @@
 }
 
 @media (min-width: 600px) {
-  .accordionWrapper {
-    padding: 1rem;
-  }
   .accordion__panel--content {
     align-items: flex-end;
     justify-content: space-evenly;
