--- a/src/style/pages/sections/_sectionIntro.scss
+++ b/src/style/pages/sections/_sectionIntro.scss
@@ -14,7 +14,6 @@
     text-align: justify;
     text-justify: distribute-all-lines;
   }
-
   &__next {
     width: 100%;
     height: auto;
@@ -25,6 +24,19 @@
     align-items: center;
     // padding: 3rem;
   }
+}
+
+.arrowAction {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding-bottom: 2rem;
+
+  animation: shinyText 2s -0.2s infinite ease-in-out;
 }
 
 .arrowMargin {
@@ -428,31 +440,21 @@
   }
 }
 
-// #dark {
-//   & .arrow:nth-child(1) {
-//     transform: translateY(var(--_arrowGap));
-
-//     &::before,
-//     &::after {
-//       animation-delay: 0.9s;
-//     }
-//   }
-//   & .arrow:nth-child(2) {
-//     transform: translateY(0px);
-//     &::before,
-//     &::after {
-//       animation-delay: 0.6s;
-//     }
-//   }
-//   & .arrow:nth-child(3) {
-//     transform: translateY(calc(-1 * var(--_arrowGap)));
-//     &::before,
-//     &::after {
-//       animation-delay: 0.3s;
-//     }
-//   }
-// }
-
+//for TEXT ::
+@keyframes shinyText {
+  0% {
+    opacity: 0;
+    text-shadow: 0px 0 0 rgba($textColor_dark, 1);
+  }
+  60% {
+    opacity: 1;
+    text-shadow: -4px 0 10px rgba($textColor_dark, 0.04);
+  }
+  100% {
+    opacity: 0;
+    text-shadow: -4px 0 10px rgba($textColor_dark, 0.04);
+  }
+}
 //For Color Mode : blue ://
 
 @keyframes shinyArrow_blue {
