--- a/src/style/settings/_fonts.scss
+++ b/src/style/settings/_fonts.scss
@@ -7,6 +7,9 @@
 }
 
 .font {
+  &__scroll {
+    font-size: 0.8rem;
+  }
   &__newHeader {
     font-size: clamp(0.75rem, 12px + 0.3vw, 1.5rem);
     font-weight: 400;
@@ -57,7 +60,7 @@
     line-height: calc(1rem + 0.8vw);
   }
   &__introTitle {
-    font-size: clamp(2rem, 1.5rem + 1.5vw, 3rem);
+    font-size: clamp(2rem, 1.5rem + 1.5vw, 2.5rem);
     font-weight: 700;
     letter-spacing: 1.5px;
     line-height: 2.5rem;
@@ -77,9 +80,9 @@
     text-shadow: 0 5px 10px rgba(0, 0, 0, 1), 0 5px 15px rgba(0, 0, 0, 1);
   }
   &__strongText {
-    text-align: center;
+    text-align: justify;
     font-size: clamp(0.4rem, 10px + 0.3vw, 1.5rem);
-    font-weight: 200;
+    font-weight: 300;
     letter-spacing: 0.5px;
     line-height: calc(14px + 1.2vw);
   }
