--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 @import "./style/components/contactForm";
 @import "./style/components/flexBubbleContainer";
 @import "./style/components/socialButtons";
+@import "./style/components/loader";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
 @import "./style/pages/sections/sectionSkills";
