--- a/src/style/components/_contactForm.scss
+++ b/src/style/components/_contactForm.scss
@@ -1,3 +1,13 @@
+:root {
+  --_validColor: #08ed32;
+  --_invalidColor: #e90a0a;
+  --_standardColor: #fff;
+
+  --_textColor: #fff;
+  --_secondTextColor: rgba(255, 255, 255, 0.5);
+  --_bgColor: #353333;
+}
+
 .contactForm {
   width: 100%;
   max-width: 1100px;
@@ -13,7 +23,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    margin: 2rem 0;
+    //margin: 2rem 0;
   }
 }
 .contactBlock {
@@ -32,48 +42,147 @@
   &--bottom {
     padding-bottom: 2rem;
   }
+}
 
-  &__lign {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+//TO Change with Tilde =
+.inputBox {
+  position: relative;
+  width: 100%; //! To change.
+  padding: 3rem 0 0 0;
+
+  &__input {
     width: 100%;
-    height: 3rem;
-    border-radius: 1.5rem;
-    margin: 1rem;
-    padding: 0.5rem 2rem;
+    height: 40px;
+    // background: transparent;
+    background: var(--_bgColor);
+    color: var(--_textColor);
+    //border: 1px solid red;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-shadow: none;
+    //! To change.
+    font-size: 1em;
+    font-weight: 700;
 
-    &--fullHeight {
-      height: 13rem;
+    letter-spacing: 0.15em;
+    padding: 0.5rem 1rem;
+
+    &--uppercase {
+      text-transform: uppercase;
     }
-
-    & label {
-      width: calc(140px + 2vw);
-    }
-    & input {
-      position: relative;
-      width: 100%;
-      height: 96%;
-
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      padding-left: 1rem;
-    }
-
-    & textarea {
-      position: relative;
-      width: 100%;
-      height: 96%;
-
-      background: transparent;
-      border: none;
-      border-left: 2px solid rgb(195, 183, 183);
-      cursor: pointer;
-      padding-left: 1rem;
+    &--textarea {
+      height: 300px;
+      line-height: 1.5rem;
     }
   }
+
+  &__text {
+    position: absolute;
+    left: 5px;
+    bottom: 0.4rem;
+    color: var(--_secondTextColor);
+    text-transform: uppercase;
+    transform: translateX(1rem);
+    transition: 0.3s transform ease-out;
+
+    &--textarea {
+      bottom: initial;
+      top: 3.4rem;
+    }
+    // &:hover {
+    //   color: aqua;
+    //   transform: translateY(-2rem);
+    //   transition: 0.3s transform ease-out;
+    //   font-size: 0.65em;
+    // }
+  }
+
+  &__alert {
+    position: absolute;
+    right: 0rem;
+    top: 3rem;
+    color: var(--_secondTextColor);
+
+    transition: 0.3s all ease-out;
+    opacity: 0;
+
+    &--textarea {
+      top: 50%;
+    }
+
+    &--number {
+      top: initial;
+      bottom: 1rem;
+    }
+  }
+
+  //TO Change with Tilde = control same level
+  &__input:valid ~ .inputBox__text,
+  &__input:focus ~ .inputBox__text {
+    //color: rgb(232, 25, 25);
+    transform: translateY(-2.1rem);
+    transition: 0.3s transform ease-out;
+    font-size: 0.8em;
+    font-style: italic;
+  }
+
+  &__input:focus ~ .inputBox__alert {
+    color: var(--_standardColor);
+    //* put in black in Light mode.
+    opacity: 1;
+    transform: translateY(2.4rem);
+    transition: 0.3s all ease-out;
+    font-size: 0.8em;
+
+    &--valid {
+      color: var(--_validColor);
+      //* put in black in Light mode.
+    }
+    &--textarea {
+      transform: translateY(-9.5rem);
+    }
+  }
+
+  &__input:focus ~ .inputBox__alert--error {
+    color: rgb(252, 9, 9);
+  }
+
+  &__input:valid,
+  &__input:focus {
+    border-radius: 0.5rem 0.5rem 0 0;
+    transition: 0.3s all ease-out;
+  }
+
+  &__input:valid ~ i,
+  &__input:focus ~ i {
+    width: 100%;
+    transition: 0.3s all ease-out;
+  }
+}
+
+.validInput {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 4px;
+  background: var(--_standardColor);
+  transition: 0.3s all ease-out;
+  //padding: 0 1rem;
+
+  &--valid {
+    background: var(--_validColor);
+    transition: 0.3s all ease-out;
+  }
+  &--invalid {
+    background: var(--_invalidColor);
+    transition: 0.3s all ease-out;
+  }
+}
+
+.buttonOnComplete {
+  margin: 2rem 0 5rem 0;
 }
 
 @media (min-width: 800px) {
@@ -88,161 +197,25 @@
       padding-bottom: 0rem;
     }
   }
-}
-
-//lightMode :
-#light .contactBlock__lign {
-  background: $color_page_bg_2_light;
-  color: $color_page_bg_1_dark;
-
-  & input {
-    border-left: 2px solid $color_page_bg_1_dark;
-    color: $textColor_light;
+  .buttonOnComplete {
+    margin: 4rem 0 5rem 0;
   }
 }
 
 #light {
-  & #purple .contactBlock__lign input:focus {
-    outline: none !important;
-    border: 3px solid $colorTheme_purple-light;
+  & .inputBox {
+    --_validColor: #06ab24;
+    --_standardColor: #7f8080;
+    --_bgColor: #f5f5f5;
+    --_textColor: #353333;
+    --_secondTextColor: #7f8080;
   }
-  & #yellow .contactBlock__lign input:focus {
-    outline: none !important;
-    border: 3px solid $colorTheme_yellow-light;
-  }
-  & #green .contactBlock__lign input:focus {
-    outline: none !important;
-    border: 3px solid $colorTheme_green-light;
-  }
-  & #blue .contactBlock__lign input:focus {
-    outline: none !important;
-    border: 3px solid $colorTheme_blue-light;
-  }
-  & #red .contactBlock__lign input:focus {
-    outline: none !important;
-    border: 3px solid $colorTheme_red-light;
+
+  & .validInput {
+    --_validColor: #06ab24;
+    --_standardColor: #7f8080;
   }
 }
 
-//darkMode :
-#purple .contactBlock__lign input:focus {
-  outline: none !important;
-  border: 3px solid $colorTheme_purple;
-}
-#yellow .contactBlock__lign input:focus {
-  outline: none !important;
-  border: 3px solid $colorTheme_yellow;
-}
-#green .contactBlock__lign input:focus {
-  outline: none !important;
-  border: 3px solid $colorTheme_green;
-}
-#blue .contactBlock__lign input:focus {
-  outline: none !important;
-  border: 3px solid $colorTheme_blue;
-}
-#red .contactBlock__lign input:focus {
-  outline: none !important;
-  border: 3px solid $colorTheme_red;
-}
-
-#dark .contactBlock__lign {
-  background: $color_page_bg_1_dark;
-  color: $color_page_bg_1_light;
-
-  & input {
-    border-left: 2px solid $color_page_bg_1_light;
-    color: $textColor_dark;
-  }
-}
-
-/* Mise en forme de la balise select*/
-select {
-  width: 100%;
-  height: 96%;
-  appearance: none;
-  outline: none;
-  border: none;
-
-  //background: $color_page_bg_1_dark;
-
-  background-image: none;
-  box-shadow: none;
-  font-size: 0.9rem;
-  padding-left: 15px;
-  cursor: pointer;
-}
-
-#light select {
-  background: none;
-}
-#dark select {
-  background: $color_page_bg_1_dark;
-}
-
-/* Mise en forme de la div .select*/
-.selectTest {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-
-  font-size: 1rem;
-}
-
-#light .selectTest {
-  color: $textColor_light;
-  border-left: 2px solid $color_page_bg_1_dark;
-}
-#dark .selectTest {
-  color: $textColor_dark;
-  border-left: 2px solid $color_page_bg_1_light;
-}
-
-/* Mise en place de la flèche */
-.selectTest::after {
-  content: "\276F";
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 2px;
-  width: auto;
-  height: 100%;
-  pointer-events: none;
-  transform: rotate(90deg);
-  font-size: 1.5rem;
-  background: transparent;
-}
-
-#light {
-  & #red .selectTest:hover::after {
-    color: $colorTheme_red-light;
-  }
-  & #purple .selectTest:hover::after {
-    color: $colorTheme_purple-light;
-  }
-  & #yellow .selectTest:hover::after {
-    color: $colorTheme_yellow-light;
-  }
-  & #green .selectTest:hover::after {
-    color: $colorTheme_green-light;
-  }
-  & #blue .selectTest:hover::after {
-    color: $colorTheme_blue-light;
-  }
-}
-#red .selectTest:hover::after {
-  color: $colorTheme_red;
-}
-#purple .selectTest:hover::after {
-  color: $colorTheme_purple;
-}
-#yellow .selectTest:hover::after {
-  color: $colorTheme_yellow;
-}
-#green .selectTest:hover::after {
-  color: $colorTheme_green;
-}
-#blue .selectTest:hover::after {
-  color: $colorTheme_blue;
-}
+// #dark {
+// }
