--- a/src/style/components/_socialButtons.scss
+++ b/src/style/components/_socialButtons.scss
@@ -58,7 +58,7 @@
 
       &:hover {
         width: 200px;
-        border-radius: 30px;
+        // border-radius: 30px;
       }
 
       &:hover .socialText {
@@ -98,10 +98,11 @@
 
 @media (max-width: 1100px) {
   .socialNav {
-    transform: translateX(-1.2rem);
+    transform: translateX(-0.8rem);
     scale: 0.9;
   }
 }
+
 @media (max-width: 800px) {
   .socialNav {
     width: 100vw;
