--- a/src/style/layout/_gridManager.scss
+++ b/src/style/layout/_gridManager.scss
@@ -92,7 +92,7 @@
       position: absolute;
       width: 100%;
       height: auto;
-      min-height: 50vh;
+      min-height: 70vh;
       //! start position to change
       //transform: rotateX(0deg);
       transform: rotateX(90deg);
@@ -100,7 +100,7 @@
       transition: var(--_animeDuration) ease-in-out;
 
       //COLOR THEME : default Dark
-      background: $color_page_bg_2_dark;
+      background: rgba(37, 1, 1, 0.5);
       border: 2px solid $colorTheme_red;
 
       border-radius: 1rem;
@@ -109,7 +109,7 @@
       overflow: scroll;
     }
   }
-  //transition time inversion
+  //transition time inversion 0.3rem
   &:hover > .gridManager__box__card--cardA {
     transition-delay: 0s;
   }
@@ -128,7 +128,7 @@
 .detailCard {
   position: relative;
   width: 100%;
-  //! height: auto;
+  //min-height: 50vh;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -163,7 +163,7 @@
     // grid-template-rows: repeat(4, minmax(1fr, auto));
     grid-template-rows: repeat(4, auto);
     //grid-auto-flow: dense;
-    grid-gap: 0.2rem;
+    grid-gap: 0.3rem;
 
     z-index: -1;
     padding: 50px 2rem 2rem 2rem;
@@ -172,7 +172,7 @@
       // COLOR THEME default :  darkTheme
       height: auto;
       color: $textColor_dark;
-      padding: 1rem;
+      padding: 2rem;
       text-align: left;
 
       & h3 {
@@ -182,21 +182,25 @@
       &:nth-child(1) {
         grid-column: span 3;
         grid-row: span 1;
-        padding-top: 4rem;
+        padding-top: 2rem;
       }
       &:nth-child(2) {
         grid-column: span 2;
         grid-row: span 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         & svg {
-          padding: 1rem;
+          //padding: 1rem;
         }
       }
       &:nth-child(3) {
-        grid-column: span 5;
+        grid-column: span 2;
         grid-row: span 3;
       }
       &:nth-child(4) {
-        grid-column: span 5;
+        grid-column: span 3;
         grid-row: span 2;
       }
     }
@@ -260,7 +264,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem 0 2rem 0;
+    padding: 1rem 1rem 2rem 1rem;
     & svg {
       width: 40px;
       height: 40px;
@@ -299,7 +303,7 @@
     background: rgba($color_page_bg_2_light, 0.2);
   }
   & .gridManager__box__card--cardC {
-    background: $color_page_bg_1_light;
+    background: rgba(242, 234, 234, 0.5);
   }
   & .detailCard__grid__element {
     color: $textColor_light;
@@ -703,6 +707,17 @@
     grid-column: span 3;
     grid-row: span 3;
   }
+  // .gridManager__box {
+  //   &__card--cardB {
+  //     max-width: 60vw;
+  //   }
+  //   &__card--cardC {
+  //     max-width: 0vw;
+  //   }
+  //   &__card--cardA {
+  //     max-width: 60vw;
+  //   }
+  // }
 }
 @media (max-width: 600px) {
   .gridManager {
@@ -719,19 +734,22 @@
     grid-row: span 1 !important;
 
     &__card--cardB {
+      max-width: 70vw;
       position: relative;
       transform: rotateY(0deg);
       border-radius: 0 0 1rem 1rem;
     }
     &__card--cardC {
-      min-height: 70vh;
+      max-width: 70vw;
+      min-height: 80vh;
     }
     &__card--cardA {
+      max-width: 70vw;
       transform: none !important;
       border-radius: 1rem 1rem 0 0;
     }
   }
   .detailCard__grid {
-    padding: 50px 1rem 1rem 1rem;
+    padding: 3rem 0.25vw;
   }
 }
